# Thresher2.0

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/thresher/: thresher.h
src/: fits.cc  image.cc  image.h  lucky.cc  test.cc  thresh.cc  thresher.cc
